# django-ufilter

./: .editorconfig  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements-dev.txt  setup.py  tox.ini
.github/workflows/: lint.yaml  test.yaml  updaterelease.yaml
django_ufilter/: __init__.py  filters.py  validators.py
django_ufilter/backends/: base.py
django_ufilter/filtersets/: base.py  plain.py
django_ufilter/integrations/: drf.py
docs/: big_picture.rst  conf.py  usage.rst
docs/api/: url_filter.integrations.rst
requirements/: requirements-dev.txt
test_project/: settings.py  urls.py
test_project/generic/: api.py
test_project/many_to_many/: api.py
test_project/many_to_one/: api.py
test_project/one_to_one/: api.py
tests/: conftest.py  test_fields.py  test_filters.py  test_utils.py
tests/backends/: test_django.py  test_plain.py
tests/filtersets/: test_base.py  test_django.py  test_plain.py
tests/integrations/: test_drf.py
url_filter/backends/: base.py
url_filter/integrations/: drf.py
